--- a/style/adminStyle.css
+++ b/style/adminStyle.css
@@ -11,6 +11,15 @@
   transform: translate(-50%, -10%);
 }
 
+.section-p1 {
+  position: absolute;
+  right: 5%;
+  top: 15%;
+  transform: translate(-50%, -10%);
+
+  font-style: italic;
+}
+
 form {
   margin-top: 10%;
   width: 30%;
@@ -22,6 +31,7 @@ form {
   margin-right: 2%;
   min-height: 300px;
   overflow: auto;
+  position: ;
 }
 
 input {
